css/nav.css
#nav
{
   width: 100%;
   height: 50px;
   z-index: 10;
   background-color: transparent;
   position: fixed;
   top: 0;
   text-align: center;
}
#nav:hover
{
	background-color:white;
	-webkit-transition: 0.5s;
	-moz-transition: 0.5s;
	-ms-transition: 0.5s;
	-o-transition: 0.5s;
	transition: 0.5s;
}
	
#nav #logo
{
	background-image: url(../img/logo/full-transp-black.png);
	background-size: cover !important;
	background-position: center center !important;
	background-repeat: no-repeat;
	height: 40px;
	width: 104px;
	top: 50%;
	left: 50%;
	-webkit-transform:translate(-50%, -50%);
    -moz-transform:translate(-50%, -50%);
    -o-transform:translate(-50%, -50%);
	transform: translate(-50%, -50%);
	display: block;
	position: absolute;
	z-index: 11;
}
	
#hamburger
{
	display: block;
	background:none;
	position:absolute;
	top:0;
	right:0;
	line-height:50px;
	padding:0 15px 0 15px;
	color:#999;
	border:0;
	font-size:1.5em;
	font-weight:bold;
	cursor:pointer;
	outline:none;
	z-index:11;
}

#cross
{
	display: none;
	background:none;
	position:absolute;
	top:0px;
	right:0;
	padding:10.5px 16px 0 16px;
	color:#999;
	border:0;
	font-size:3em;
	line-height:50px;
	font-weight:bold;
	cursor:pointer;
	outline:none;
	z-index:11;
}

#menu 
{
	position:fixed;
	top: 49px;
	z-index:10; 
	width:100%;
	height: 100%;
	font-weight:bold;
	font-size:18px;
	text-align: center;
	background-color: white;
	opacity:0;
	filter: alpha(opacity=0); /* old ie */
	visibility: hidden;
	-webkit-transition: visibility 0s 0.7s, opacity 0.7s;
	-moz-transition: visibility 0s 0.7s, opacity 0.7s;
	-ms-transition:visibility 0s 0.7s, opacity 0.7s;
	-o-transition:visibility 0s 0.7s, opacity 0.7s;
	transition: visibility 0s 0.7s, opacity 0.7s;
}
#menu.menu-active
{
	opacity:1;
	filter: alpha(opacity=100); /* old ie */
	visibility: visible;
	-webkit-transition: visibility 0s, opacity 0.7s;
	-moz-transition: visibility 0s, opacity 0.7s;
	-ms-transition:visibility 0s, opacity 0.7s;
	-o-transition:visibility 0s, opacity 0.7s;
	transition: visibility 0s, opacity 0.7s;
}
#menu>ul
{
	height: 100%;
	width: 100%;
	list-style-type:none;
	margin: 0;
	padding: 0;
}

#menu>ul>li
{
	height: calc(20% - 10px);
	padding:0;
	margin: 0;
}
nav ul>li>a
{
	position: relative;
	color: black;
	height: 100%;
	width: 100%;
	display: flex;
	align-items: center;
	justify-content: center;
	text-align: center;
}
nav ul>li>a:hover
{
	background-color: #20adff;
	-webkit-transition: 0.5s;
	-moz-transition: 0.5s;
	-ms-transition: 0.5s;
	-o-transition: 0.5s;
	transition: 0.5s;
}

#nojs-menu
{
	position:fixed;
	top: 49px;
	z-index:11; 
	width:100%;
	font-weight:bold;
	font-size:18px;
	text-align: center;
	background-color: white;
}
#nojs-menu>ul
{
	height: 150px;
	width: 100%;
	list-style-type:none;
	margin: 0;
	padding: 0;
}

#nojs-menu>ul>li
{
	display: block;
	height: 20%;
	padding:0;
	margin: 0;
}

/* Large devices (laptops/desktops, 992px and up) */
@media only screen and (min-width: 992px) {
	
	#nav
	{height: 80px;}
	
	#nav #logo
	{
		height: 50px;
		width: 130px;
		left:20px;
		top: 50%;
		-webkit-transform: translate(0, -50%);
		-moz-transform: translate(0, -50%);
		-o-transform: translate(0, -50%);
		transform: translate(0, -50%);
	}

	#menu
	{
		visibility: visible;
		opacity: 1;
		position: relative;
		top: 0;
		height: 80px;
		width: 100%;
		background: none;
	}

	#menu>ul>li
	{
		display: inline-block;
		height: 100%;
	}

	#menu>ul>li>a
	{
		padding: 0 20px;
	}
	
	#hamburger
		{display: none!important}
	#cross
		{display: none!important}
	#nojs-menu
		{display: none}
} 

